@startuml
left to right direction
skinparam nodesep 30
package "Core" {
  interface EmailSenderUseCase {
    + sendEmail(to: String, subject: String, body: String)
  }
  class EmailRequest {
    + to: String
    + subject: String
    + body: String
  }
  class EmailServiceException
}

package "Application" {
  class EmailSenderService {
    - emailSenderGateway: EmailSenderGateway
    + sendEmail(to: String, subject: String, body: String)
  }
}

package "Adapters" {
  interface EmailSenderGateway {
    + sendEmail(to: String, subject: String, body: String)
  }
}

package "Infra" {
  class AwsSesEmailSender {
    - amazonSimpleEmailService: AmazonSimpleEmailService
    + sendEmail(to: String, subject: String, body: String)
  }
  class AwsSesConfig {
    + amazonSimpleEmailService(): AmazonSimpleEmailService
  }
}

package "Controllers" {
  class EmailSenderController {
    - emailSenderService: EmailSenderService
    + sendEmail(request: EmailRequest): ResponseEntity<String>
  }
}

EmailSenderService ..|> EmailSenderUseCase
AwsSesEmailSender ..|> EmailSenderGateway
EmailSenderService --> EmailSenderGateway
EmailSenderController --> EmailSenderService
@enduml